# rtcmp

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  Shot.h  TODO  accucheck.h  compare_config.h  configure.ac  jsoncmp.cpp  partm.c  partm.cpp  perf.sh  perfcomp.c  perfcomp.cpp  perfcomp.h  rtcmp.c  rtcmp.cpp  rtcmp.h  shotset.cpp  shotset.h  test.cpp  tests.sh  tri.c  tri.h
CMake/: FindBRLCAD.cmake
adrt/: adrt.c  adrt.cpp  adrt.h  adrt_struct.h  gfile.cpp  gfile.h
comp/: compare_config.h  jsoncmp.cpp  jsonwriter.hpp  shot_comp.cpp  shot_comp.h  shotset.cpp  shotset.h
dry/: dry.c  dry.cpp  dry.h
json/: rt_json.cpp  rt_json.h
rayforce/: rayforce.c  rayforce.h
rt/: rt.c  rt.h  rt_acc.cpp  rt_acc.h  rt_diff.cpp  rt_diff.h  rt_perf.cpp  rt_perf.h
tie/: tie.c  tie.h  tie_diff.cpp  tie_diff.h  tie_perf.cpp  tie_perf.h
